k8s/chat-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-svc-deployment
  labels:
    app: chat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat
  template:
    metadata:
      labels:
        app: chat
    spec:
      containers:
        - name: chat
          image: ratheeshku/chatservice:v1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 3005
---
apiVersion: v1
kind: Service
metadata:
  name: chat-service
spec:
  selector:
    app: chat
  ports:
    - protocol: TCP
      port: 3005
      targetPort: 3005
  type: ClusterIP
