k8s/notification-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-svc-deployment
  labels:
    app: notification
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification
  template:
    metadata:
      labels:
        app: notification
    spec:
      containers:
        - name: notification
          image: ratheeshku/notificationservice:v1.0
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
spec:
  selector:
    app: notification
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
  type: ClusterIP
