k8s/user-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-svc-deployment
  labels:
    app: user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
        - name: user
          image: ratheeshku/userservice:v1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  selector:
    app: user
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
  type: ClusterIP
